--- a/web/assets/less/antd-custom.less
+++ b/web/assets/less/antd-custom.less
@@ -1,4 +1,5 @@
-@import 'ant-design-vue/dist/antd.less'; 
+@import 'ant-design-vue/dist/antd.less';
+
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 // override: 
 @primary-color: #eb6f92; // primary color for all components
@@ -7,20 +8,34 @@
 @warning-color: #f6c177; // warning state color
 @error-color: #FE4C4F; // error state color
 @font-size-base: 14px; // major text font size
-@heading-color: #ea9a97; // heading text color
+@heading-color: #eb6f92; // heading text color
 @text-color: rgb(224, 222, 244); // major text color
-@text-color-secondary:rgba(224, 222, 244, 0.6); // secondary text color
+@text-color-secondary: rgba(224, 222, 244, 0.6); // secondary text color
 @disabled-color: rgba(0, 0, 0, 0.25); // disable state color
 @border-radius-base: 0px; // major border radius
 @border-color-base: #393552; // major border color
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
 
-@body-background: #2a273f ;
+@body-background: #2a273f;
 @component-background: #232136;
+
 body {
     font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
+// tailwind: 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    a {
+        color: inherit;
+    }
+    h1, h2, h3, h4, h5 {
+        margin-bottom: 0;
+    }
+}
 
 .ant-input-affix-wrapper input {
     padding-left: 40px !important;
@@ -35,8 +50,3 @@ body {
         box-shadow: 0 0 0 3px rgba(235, 111, 146, 0.3)
     }
 }
-
-
-@tailwind base;
-@tailwind components; 
-@tailwind utilities;
